Small spacing fix

--- a/css/base.scss
+++ b/css/base.scss
@@ -234,7 +234,6 @@ p {
           &.or-choice {
             font-weight: bold;
             font-style: italic;
-            margin: 10px 0;
           }
 
           span {
